cmake_minimum_required(VERSION 3.21)
project(untitled1)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled1 main.cpp)
add_executable(run1 MyQusetion.cpp)
add_executable(run2 ExFinde_sumMaxRow.cpp)
add_executable(run3 sturctureCode.cpp)
add_executable(run4 myfile.cpp)
add_executable(run5 for_q1.cpp)
add_executable(run6 for_3.cpp)
add_executable(tet Test.c)